testsuite/tests/properties/invalid_no/test.out
== Correct code ==
Code generation was successful

== Incorrect No usage ==
test.py:21: error: Invalid type for No expression: Int

Done
